--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
       <!-- Features section -->
       <section>
+        <h2 hidden>Преимущества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
