--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
       <section>
         <h1 hidden>Портфолио</h1>
         <ul>
-          <li><a href="">Все</a>
+          <li><a href="">Все</a></li>
           <li><a href="">Веб-сайты</a></li>
           <li><a href="">Приложения</a></li>
           <li><a href="">Дизайн</a></li>
-          <li><a href="">Маркетинг</a></li></li>
+          <li><a href="">Маркетинг</a></li>
         </ul>
         <ul>
           <li>
@@ -42,56 +42,96 @@
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/new-orlean.jpg" alt="Двое спортсменов играют в баскетбол" width="370" height="294" />
+              <img
+                src="./images/projects/new-orlean.jpg"
+                alt="Двое спортсменов играют в баскетбол"
+                width="370"
+                height="294"
+              />
               <h2>Постер New Orlean vs Golden Star</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/seafood.jpg" alt="Логотип ресторана Seafood" width="370" height="294" />
+              <img
+                src="./images/projects/seafood.jpg"
+                alt="Логотип ресторана Seafood"
+                width="370"
+                height="294"
+              />
               <h2>Ресторан Seafood</h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/prime-project.jpg" alt="Наушники" width="370" height="294" />
+              <img
+                src="./images/projects/prime-project.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
               <h2>Проект Prime</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/boxes-project.jpg" alt="Две картонные коробки" width="370" height="294" />
+              <img
+                src="./images/projects/boxes-project.jpg"
+                alt="Две картонные коробки"
+                width="370"
+                height="294"
+              />
               <h2>Проект Boxes</h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/inspiration-site.jpg" alt="Вебсайт открыт на мониторе" width="370" height="294" />
+              <img
+                src="./images/projects/inspiration-site.jpg"
+                alt="Вебсайт открыт на мониторе"
+                width="370"
+                height="294"
+              />
               <h2>Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/limited-edition.jpg" alt="Страницы журнала" width="370" height="294" />
+              <img
+                src="./images/projects/limited-edition.jpg"
+                alt="Страницы журнала"
+                width="370"
+                height="294"
+              />
               <h2>Издание Limited Edition</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/lab-project.jpg" alt="Брендовая карточка" width="370" height="294" />
+              <img
+                src="./images/projects/lab-project.jpg"
+                alt="Брендовая карточка"
+                width="370"
+                height="294"
+              />
               <h2>Проект LAB</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/projects/growing-business.jpg" alt="Мужчина работает за ноутбуком" width="370" height="294" />
+              <img
+                src="./images/projects/growing-business.jpg"
+                alt="Мужчина работает за ноутбуком"
+                width="370"
+                height="294"
+              />
               <h2>Growing Business</h2>
               <p>Приложение</p>
             </a>
