--- a/index.html
+++ b/index.html
@@ -8,77 +8,91 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <!-- Header -->
+    <header class="header">
+      <a class="logo-link" href="./index.html" lang="en"
+        >Web<span class="logo-dark">Studio</span></a
+      >
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link current-page" href="">Студия</a></li>
+          <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-list">
+        <li class="contact-item">
+          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-section">
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="main-btn" type="button">Заказать услугу</button>
       </section>
 
       <!-- Features section -->
-      <section>
+      <section class="features-section">
         <h2 hidden>Преимущества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-desc">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-desc">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-desc">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="features-item">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-desc">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
       <!-- Our work section -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="work-section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="work-list">
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/devices/comp.jpg"
               alt="Сотрудник работает с компьютером"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/devices/phone.jpg"
               alt="Сотрудник работает с телефоном"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/devices/tablet.jpg"
               alt="Сотрудник работает с планшетом"
               width="370"
@@ -89,65 +103,77 @@
       </section>
 
       <!-- Team section -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/igor.jpg"
               alt="Дизайнер продукта Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="team-desc" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/olga.jpg"
               alt="Фронтенд-разработчик Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="team-desc" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/nikolay.jpg"
               alt="Маркетолог Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="team-desc" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/team/michael.jpg"
               alt="Дизайнер интерфейса Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="team-desc" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>
+    <!-- Footer -->
+    <footer class="footer-section">
+      <a class="logo-link" href="./index.html" lang="en"
+        >Web<span class="logo-light">Studio</span></a
+      >
+      <address class="footer-addr">
         <a
+          class="addr-link"
           href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
           target="_blank"
-          rel="noopener noreferrer nofollow"
+          rel="noopener noreferrer"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="addr-list">
+          <li class="addr-item">
+            <a class="addr-link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="addr-item">
+            <a class="addr-link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
