--- a/portfolio.html
+++ b/portfolio.html
@@ -4,154 +4,185 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Портфолио</title>
+    <title lang="en">Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <!-- Header -->
+    <header class="header">
+      <a class="logo-link" href="./index.html" lang="en"
+        >Web<span class="logo-dark">Studio</span></a
+      >
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
+          <li class="nav-item"><a class="nav-link current-page" href="">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-list">
+        <li class="contact-item">
+          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
+
     <main>
       <!-- Portfolio section -->
-      <section>
+      <section class="portfolio-section">
         <h1 hidden>Портфолио</h1>
-        <ul>
-          <li><a href="">Все</a></li>
-          <li><a href="">Веб-сайты</a></li>
-          <li><a href="">Приложения</a></li>
-          <li><a href="">Дизайн</a></li>
-          <li><a href="">Маркетинг</a></li>
+        <ul class="btns-list">
+          <li class="btns-item"><a class="btns-link" href="">Все</a></li>
+          <li class="btns-item"><a class="btns-link" href="">Веб-сайты</a></li>
+          <li class="btns-item"><a class="btns-link" href="">Приложения</a></li>
+          <li class="btns-item"><a class="btns-link" href="">Дизайн</a></li>
+          <li class="btns-item"><a class="btns-link" href="">Маркетинг</a></li>
         </ul>
-        <ul>
-          <li>
-            <a href="">
-              <img src="./images/projects/tech-site.jpg" alt="Ноутбук" width="370" height="294" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+        <ul class="project-list">
+          <li class="project-item">
+            <a class="project-link" href="">
+              <img
+                class="project-img"
+                src="./images/projects/tech-site.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title">Технокряк</h2>
+              <p class="project-desc">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/new-orlean.jpg"
                 alt="Двое спортсменов играют в баскетбол"
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="project-desc">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/seafood.jpg"
                 alt="Логотип ресторана Seafood"
                 width="370"
                 height="294"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="project-desc">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/prime-project.jpg"
                 alt="Наушники"
                 width="370"
                 height="294"
               />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
+              <p class="project-desc">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/boxes-project.jpg"
                 alt="Две картонные коробки"
                 width="370"
                 height="294"
               />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
+              <p class="project-desc">Приложение</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/inspiration-site.jpg"
                 alt="Вебсайт открыт на мониторе"
                 width="370"
                 height="294"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="project-title"><span lang="en">Inspiration has no Borders</span></h2>
+              <p class="project-desc">Веб-сайт</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/limited-edition.jpg"
                 alt="Страницы журнала"
                 width="370"
                 height="294"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="project-desc">Дизайн</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/lab-project.jpg"
                 alt="Брендовая карточка"
                 width="370"
                 height="294"
               />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
+              <p class="project-desc">Маркетинг</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="project-item">
+            <a class="project-link" href="">
               <img
+                class="project-img"
                 src="./images/projects/growing-business.jpg"
                 alt="Мужчина работает за ноутбуком"
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="project-title"><span lang="en">Growing Business</span></h2>
+              <p class="project-desc">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>
+
+    <!-- Footer -->
+    <footer class="footer-section">
+      <a class="logo-link" href="./index.html" lang="en"
+        >Web<span class="logo-light">Studio</span></a
+      >
+      <address class="footer-addr">
         <a
+          class="addr-link"
           href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
           target="_blank"
-          rel="noopener noreferrer nofollow"
+          rel="noopener noreferrer"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
-        <ul>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="addr-list">
+          <li class="addr-item">
+            <a class="addr-link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="addr-item">
+            <a class="addr-link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
