--- a/portfolio.html
+++ b/portfolio.html
@@ -16,22 +16,24 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a class="logo-link" href="./index.html" lang="en"
+      <a class="logo-link link" href="./index.html" lang="en"
         >Web<span class="logo-dark">Studio</span></a
       >
       <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
-          <li class="nav-item"><a class="nav-link current-page" href="">Портфолио</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+        <ul class="nav-list list">
+          <li class="nav-item"><a class="nav-link link" href="./index.html">Студия</a></li>
+          <li class="nav-item">
+            <a class="nav-link link current-page" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact-list">
+      <ul class="contact-list list">
         <li class="contact-item">
-          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="contact-item">
-          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -40,16 +42,16 @@
       <!-- Portfolio section -->
       <section class="portfolio-section">
         <h1 hidden>Портфолио</h1>
-        <ul class="btns-list">
-          <li class="btns-item"><a class="btns-link" href="">Все</a></li>
-          <li class="btns-item"><a class="btns-link" href="">Веб-сайты</a></li>
-          <li class="btns-item"><a class="btns-link" href="">Приложения</a></li>
-          <li class="btns-item"><a class="btns-link" href="">Дизайн</a></li>
-          <li class="btns-item"><a class="btns-link" href="">Маркетинг</a></li>
+        <ul class="btns-list list">
+          <li class="btns-item"><a class="btns-link link" href="">Все</a></li>
+          <li class="btns-item"><a class="btns-link link" href="">Веб-сайты</a></li>
+          <li class="btns-item"><a class="btns-link link" href="">Приложения</a></li>
+          <li class="btns-item"><a class="btns-link link" href="">Дизайн</a></li>
+          <li class="btns-item"><a class="btns-link link" href="">Маркетинг</a></li>
         </ul>
-        <ul class="project-list">
+        <ul class="project-list list">
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/tech-site.jpg"
@@ -62,7 +64,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/new-orlean.jpg"
@@ -75,7 +77,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/seafood.jpg"
@@ -88,7 +90,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/prime-project.jpg"
@@ -101,7 +103,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/boxes-project.jpg"
@@ -114,7 +116,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/inspiration-site.jpg"
@@ -127,7 +129,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/limited-edition.jpg"
@@ -140,7 +142,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/lab-project.jpg"
@@ -153,7 +155,7 @@
             </a>
           </li>
           <li class="project-item">
-            <a class="project-link" href="">
+            <a class="project-link link" href="">
               <img
                 class="project-img"
                 src="./images/projects/growing-business.jpg"
@@ -171,23 +173,23 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-      <a class="logo-link" href="./index.html" lang="en"
+      <a class="logo-link link" href="./index.html" lang="en"
         >Web<span class="logo-light">Studio</span></a
       >
       <address class="footer-addr">
         <a
-          class="addr-link"
+          class="addr-link link"
           href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
           target="_blank"
           rel="noopener noreferrer"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
-        <ul class="addr-list">
+        <ul class="addr-list list">
           <li class="addr-item">
-            <a class="addr-link" href="mailto:info@example.com">info@example.com</a>
+            <a class="addr-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li class="addr-item">
-            <a class="addr-link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="addr-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
