--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a class="logo-link" href="./index.html" lang="en"
+      <a class="logo-link link" href="./index.html" lang="en"
         >Web<span class="logo-dark">Studio</span></a
       >
       <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link current-page" href="">Студия</a></li>
-          <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+        <ul class="nav-list list">
+          <li class="nav-item"><a class="nav-link link current-page" href="">Студия</a></li>
+          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contact-list">
+      <ul class="contact-list list">
         <li class="contact-item">
-          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="contact-item">
-          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -40,13 +40,13 @@
       <!-- Hero section -->
       <section class="hero-section">
         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="main-btn" type="button">Заказать услугу</button>
+        <button class="main-btn btn" type="button">Заказать услугу</button>
       </section>
 
       <!-- Features section -->
       <section class="features-section">
         <h2 hidden>Преимущества</h2>
-        <ul class="features-list">
+        <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-title">Внимание к деталям</h3>
             <p class="features-desc">
@@ -77,7 +77,7 @@
       <!-- Our work section -->
       <section class="work-section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
+        <ul class="work-list list">
           <li class="work-item">
             <img
               class="work-img"
@@ -111,7 +111,7 @@
       <!-- Team section -->
       <section class="team-section">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               class="team-img"
@@ -162,23 +162,23 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-      <a class="logo-link" href="./index.html" lang="en"
+      <a class="logo-link link" href="./index.html" lang="en"
         >Web<span class="logo-light">Studio</span></a
       >
       <address class="footer-addr">
         <a
-          class="addr-link"
+          class="addr-link link"
           href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
           target="_blank"
           rel="noopener noreferrer"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
-        <ul class="addr-list">
+        <ul class="addr-list list">
           <li class="addr-item">
-            <a class="addr-link" href="mailto:info@example.com">info@example.com</a>
+            <a class="addr-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li class="addr-item">
-            <a class="addr-link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="addr-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
