Adds header and footer style

--- a/portfolio.html
+++ b/portfolio.html
@@ -169,30 +169,30 @@
           </li>
         </ul>
       </section>
-    </main>
 
-    <!-- Footer -->
-    <footer class="footer-section">
-      <a class="logo-link link" href="./index.html" lang="en"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <address class="footer-addr">
-        <a
-          class="addr-link link"
-          href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
-          target="_blank"
-          rel="noopener noreferrer"
-          >г. Киев, пр-т Леси Украинки, 26</a
+      <!-- Footer -->
+      <footer class="footer-section">
+        <a class="logo-link link" href="./index.html" lang="en"
+          >Web<span class="logo-light">Studio</span></a
         >
-        <ul class="addr-list list">
-          <li class="addr-item">
-            <a class="addr-link link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="addr-item">
-            <a class="addr-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </footer>
+        <address class="footer-addr">
+          <a
+            class="addr link"
+            href="https://goo.gl/maps/QQ6AeRRJt7DKAPnQ9"
+            target="_blank"
+            rel="noopener noreferrer"
+            >г. Киев, пр-т Леси Украинки, 26</a
+          >
+          <ul class="addr-list list">
+            <li class="addr-item">
+              <a class="addr-link link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="addr-item">
+              <a class="addr-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </footer>
+    </main>
   </body>
 </html>
