--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,22 @@
       <!-- Portfolio section -->
       <section class="portfolio-section">
         <h1 hidden>Портфолио</h1>
-        <ul class="btns-list list">
-          <li class="btns-item"><a class="btns-link link" href="">Все</a></li>
-          <li class="btns-item"><a class="btns-link link" href="">Веб-сайты</a></li>
-          <li class="btns-item"><a class="btns-link link" href="">Приложения</a></li>
-          <li class="btns-item"><a class="btns-link link" href="">Дизайн</a></li>
-          <li class="btns-item"><a class="btns-link link" href="">Маркетинг</a></li>
+        <ul class="radio-list list">
+          <li class="radio-item">
+            <button class="radio-btn btn" type="button">Все</button>
+          </li>
+          <li class="radio-item">
+            <button class="radio-btn btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="radio-item">
+            <button class="radio-btn btn" type="button">Приложения</button>
+          </li>
+          <li class="radio-item">
+            <button class="radio-btn btn" type="button">Дизайн</button>
+          </li>
+          <li class="radio-item">
+            <button class="radio-btn btn" type="button">Маркетинг</button>
+          </li>
         </ul>
         <ul class="project-list list">
           <li class="project-item">
